--- a/utils/systemd/monerod.service
+++ b/utils/systemd/monerod.service
@@ -10,7 +10,7 @@ StateDirectory=monero
 LogsDirectory=monero
 
 Type=simple
-ExecStart=/usr/bin/monerod --config-file /etc/monerod.conf --non-interactive
+ExecStart=/usr/bin/bitvalutad --config-file /etc/bitvalutad.conf --non-interactive
 StandardOutput=null
 StandardError=null
 
